Save latency info for skipped frames with the wrong size.

We observed that if a screenshot is captured while simultaneously the frame
is resized, it is possible that the screenshot is lost. This is because the latency
info (which identifies a CompositorFrame as the screenshot's frame) is sent
from the renderer within a wrongly sized CompositorFrame, which is then
skipped by DelegatedFrameHost.

For situations with an active resize lock, the latency info attached to dropped
frames is saved by the DFH and re-attached to the first frame that is not
dropped. However, this does not happen if the frame is dropped further down
the line, because it is not of the desired size of the RWHV.

This patch also saves the latency info for such wrongly sized frames in DFH,
until a correctly sized frame is submitted.

BUG=637066

Review-Url: https://codereview.chromium.org/2248183003
Cr-Commit-Position: refs/heads/master@{#414372}

Former-commit-id: 2c33a82ea31e68a16e936668c4a0f4db7b2ef20b